force-app/main/default/objects/IdvRq_Review_Status_Config__mdt/IdvRq_Review_Status_Config__mdt.object-meta.xml
<CustomObject>
    <description>Individual Requirement Review Status configuration</description>
    <label>IdvRq Review Status Config</label>
    <pluralLabel>IdvRq Review Status Configs</pluralLabel>
</CustomObject>