force-app/main/default/objects/IdvRq_Review_Status_Config__mdt/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>