force-app/main/default/objects/IdvRq_Review_Status_Config__mdt/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <label>Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Resubmission Requested</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>