force-app/main/default/objects/IdvRq_Review_Status_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Review_Status__c</columns>
    <columns>Reviewed__c</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <columns>Submission_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>